# bitbucket-gitea-sync

./: .env.example  .gitignore  LICENSE  README.md  bitbucket_repos.py  config.py  gitea_migrate.py  log_config.py  migrate.py  models.py  pyproject.toml
